buildscript {
    ext {
        springBootVersion = '3.2.2'    // spring boot 버전 확인
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.springframework.boot:spring-boot-gradle-plugin:3.2.2"
        classpath "io.spring.gradle:dependency-management-plugin:1.1.4"    // gradle 버전 확인
    }
}


subprojects {
    apply plugin: 'java'
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    group = 'preOrderService'
    version = '0.0.1-SNAPSHOT'

    sourceCompatibility = '17'
    targetCompatibility = '17'
    compileJava.options.encoding = 'UTF-8'

    repositories {
        mavenCentral()
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
        implementation 'org.springframework.boot:spring-boot-starter-validation'
        implementation 'org.springframework.boot:spring-boot-starter-web'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        runtimeOnly 'com.mysql:mysql-connector-j'
        implementation 'org.springframework.boot:spring-boot-starter-webflux'

        // AWS S3
        implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.3.1'

        // JWT,SECURITY (JSON Web Token for Java)
        implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
        runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    }

    test {
        useJUnitPlatform()
    }
}

project(':userService'){
    bootJar {enabled= true}
    jar {enabled = false}

    dependencies {
    }
}

project(':activityService'){
    bootJar {enabled= true}
    jar {enabled = false}

    dependencies {
    }
}

project(':newsFeedService'){
    bootJar {enabled= true}
    jar {enabled = false}

    dependencies {
    }
}

project(':gateway'){
    bootJar {enabled= true}
    jar {enabled = false}

    dependencies {
    }
}
